force-app/main/default/objects/Email__c/Email__c.object-meta.xml
<CustomObject>
    <description>This custom object represents email addresses.</description>
    <label>Email</label>
    <nameField>
        <displayFormat>Email-{00000}</displayFormat>
        <label>Email ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>