force-app/main/default/objects/Email__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>This field captures the actual email address.</description>
    <label>Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>