force-app/main/default/objects/Email__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field captures the household whose email address this is.</description>
    <label>Household</label>
    <referenceTo>Household__c</referenceTo>
    <relationshipLabel>Emails</relationshipLabel>
    <relationshipName>Emails</relationshipName>
    <type>Lookup</type>
</CustomField>