force-app/main/default/objects/Email__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field specifies the individual who owns this email address.</description>
    <label>Individual</label>
    <referenceTo>Individual__c</referenceTo>
    <relationshipLabel>Emails</relationshipLabel>
    <relationshipName>Emails</relationshipName>
    <type>Lookup</type>
</CustomField>