force-app/main/default/objects/Email__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field captures the emails associated with this organization.</description>
    <label>Organization</label>
    <referenceTo>Organization__c</referenceTo>
    <relationshipLabel>Emails</relationshipLabel>
    <relationshipName>Emails</relationshipName>
    <type>Lookup</type>
</CustomField>