force-app/main/default/objects/Email__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this checked, then this is the primary email for the associated organization, household, or individual.</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>